--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,29 +1,44 @@
 {
   "name": "contracts",
-  "version": "1.0.0",
-  "description": "Smart contracts for the Asset NFT",
   "scripts": {
-    "test": "hardhat test",
     "compile": "hardhat compile",
-    "typechain": "hardhat typechain"
+    "clean:upgradable": "rimraf ./.upgradable/zkSync-era-test-node.json",
+    "clean:artifacts": "hardhat clean",
+    "clean": "yarn clean:artifacts && yarn clean:upgradable",
+    "deploy": "hardhat deploy-zksync",
+    "lint": "hardhat check",
+    "test": "yarn clean:upgradable && hardhat test"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@typechain/ethers-v5": "^10.2.1",
-    "@typechain/hardhat": "^6.1.6",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
-    "chai": "^4.3.7",
-    "ethers": "^5.7.2",
-    "hardhat": "^2.15.0",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.2.0",
-    "typescript": "^5.1.3"
+    "@matterlabs/hardhat-zksync": "^1.1.0",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
+    "@nomiclabs/hardhat-solhint": "^3.1.0",
+    "@openzeppelin/contracts": "^4.9.6",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@typechain/hardhat": "^9.0.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "@types/node": ">=18.0.0",
+    "chai": "^4.2.0",
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.0",
+    "hardhat": "^2.22.5",
+    "hardhat-gas-reporter": "^1.0.8",
+    "rimraf": "^5.0.7",
+    "solidity-coverage": "^0.8.0",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.3.0",
+    "typescript": ">=4.5.0",
+    "zksync-ethers": "^6.9.0"
   },
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2"
+  "engines": {
+    "node": ">=20",
+    "yarn": ">=3.2.4"
   }
 }
