--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.8.2",
+    "geist": "^1.3.1",
     "lucide-react": "^0.469.0",
     "next": "14.0.4",
     "react": "^18.2.0",
