--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "ollama": "^0.5.11"
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
