--- a/agent/.env.example
+++ b/agent/.env.example
@@ -2,4 +2,11 @@
 ASSET_FACTORY_ADDRESS=0x...
 
 # Network configuration
-RPC_URL=https://api.staging.lens.zksync.dev 
+RPC_URL=https://api.staging.lens.zksync.dev
+
+# Database configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=postgres
+DB_PASSWORD=your_password
+DB_NAME=lens_hackathon 
