--- a/agent/package.json
+++ b/agent/package.json
@@ -7,18 +7,26 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d src/db/data-source.ts",
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/db/data-source.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
-    "zksync-ethers": "^6.9.0",
-    "dotenv": "^16.4.5"
+    "pg": "^8.11.3",
+    "reflect-metadata": "^0.2.1",
+    "typeorm": "^0.3.20",
+    "zksync-ethers": "^6.9.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/pg": "^8.11.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
