--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.8.2",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "react": "^19.0.0",
