--- a/agent/package.json
+++ b/agent/package.json
@@ -6,19 +6,22 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts",
+    "dev": "npm run init-assets && ts-node src/index.ts",
     "watch": "tsc -w",
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:run": "ts-node ./node_modules/typeorm/cli.js migration:run -d src/db/data-source.ts",
-    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/db/data-source.ts"
+    "migration:revert": "ts-node ./node_modules/typeorm/cli.js migration:revert -d src/db/data-source.ts",
+    "init-assets": "ts-node src/scripts/init-assets.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-fetch": "^2.6.12",
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
+    "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.20",
