--- a/agent/package.json
+++ b/agent/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.21.0",
     "@types/node-fetch": "^2.6.12",
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
