--- a/agent/package.json
+++ b/agent/package.json
@@ -18,10 +18,12 @@
   "license": "ISC",
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
+    "@types/express": "^5.0.0",
     "@types/node-fetch": "^2.6.12",
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
+    "express": "^4.21.2",
     "node-fetch": "^3.3.2",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.2.1",
