--- a/contracts/package.json
+++ b/contracts/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^16.4.5",
     "ethers": "^6.13.0",
     "hardhat": "^2.22.5",
+    "hardhat-deploy": "^0.14.0",
     "hardhat-gas-reporter": "^1.0.8",
     "rimraf": "^5.0.7",
     "solidity-coverage": "^0.8.0",
